update and delete api
