# services/src/models/Responses.go
@@ -1,5 +1,9 @@
 package models
 
 type ErrResponse struct {
+	Error string `json:"msg"`
+}
+
+type MsgResponse struct {
 	Msg string `json:"msg"`
 }
